--- a/Test.program1/packages.config
+++ b/Test.program1/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Moq" version="4.1.1308.2120" targetFramework="net40" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
   <package id="NUnitTestAdapterForPrig" version="2.0.0" targetFramework="net40" />
   <package id="Prig" version="2.2.0" targetFramework="net40" />
