--- a/UntestableLibrary/UntestableLibrary.csproj
+++ b/UntestableLibrary/UntestableLibrary.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IgnoreCA1724\IgnoreCA1724.cs" />
     <Compile Include="ULInstanceGetters.cs" />
     <Compile Include="ULChatBot.cs" />
     <Compile Include="ULDllImport.cs" />
