--- a/Test.program1/Test.program1.csproj
+++ b/Test.program1/Test.program1.csproj
@@ -253,7 +253,10 @@
     <Compile Include="System\Prig\PDateTimeTest.cs" />
     <Compile Include="System\Text\Prig\PStringBuilderTest.cs" />
     <Compile Include="System\Threading\Prig\PInterlockedTest.cs" />
+    <Compile Include="TestUtilities\Mixins\System\MarshalByRefRunner.cs" />
+    <Compile Include="TestUtilities\Mixins\System\AppDomainMixin.cs" />
     <Compile Include="UntestableLibrary\IgnoreCA1724\Prig\IgnoreCA1724Test.cs" />
+    <Compile Include="UntestableLibrary\Prig\AppDomainSomethingTest.cs" />
     <Compile Include="Urasandesu\Moq\Prig\MockMixin.cs" />
     <Compile Include="TestUtilities\Mixins\System\Diagnostics\Prig\PProxyProcessMixin.cs" />
     <Compile Include="TestUtilities\Mixins\System\Diagnostics\Prig\PProcessMixin.cs" />
