--- a/Test.program1/Test.program1.NUnit.csproj
+++ b/Test.program1/Test.program1.NUnit.csproj
@@ -8,14 +8,14 @@
     <ProjectGuid>{95E1F039-6E0F-4276-934B-1DB270CF6334}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test.program1</RootNamespace>
-    <AssemblyName>Test.program1</AssemblyName>
+    <RootNamespace>Test.program1.NUnit</RootNamespace>
+    <AssemblyName>Test.program1.NUnit</AssemblyName>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug%28.NET 3.5%29|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug%28.NET 3.5%29\x86\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;_NET_3_5</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;_NET_3_5;NUnit</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -25,7 +25,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release%28.NET 3.5%29|x86'">
     <OutputPath>bin\Release%28.NET 3.5%29\x86\</OutputPath>
-    <DefineConstants>TRACE;_NET_3_5</DefineConstants>
+    <DefineConstants>TRACE;_NET_3_5;NUnit</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -37,7 +37,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug%28.NET 3.5%29|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug%28.NET 3.5%29\x64\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;_NET_3_5</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;_NET_3_5;NUnit</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -47,7 +47,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release%28.NET 3.5%29|x64'">
     <OutputPath>bin\Release%28.NET 3.5%29\x64\</OutputPath>
-    <DefineConstants>TRACE;_NET_3_5</DefineConstants>
+    <DefineConstants>TRACE;_NET_3_5;NUnit</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -59,7 +59,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug%28.NET 4%29|x86'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug%28.NET 4%29\x86\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;_NET_4</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;_NET_4;NUnit</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -70,7 +70,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug%28.NET 4%29|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug%28.NET 4%29\x64\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;_NET_4</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;_NET_4;NUnit</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -80,7 +80,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release%28.NET 4%29|x86'">
     <OutputPath>bin\Release%28.NET 4%29\x86\</OutputPath>
-    <DefineConstants>TRACE;_NET_4</DefineConstants>
+    <DefineConstants>TRACE;_NET_4;NUnit</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -91,7 +91,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release%28.NET 4%29|x64'">
     <OutputPath>bin\Release%28.NET 4%29\x64\</OutputPath>
-    <DefineConstants>TRACE;_NET_4</DefineConstants>
+    <DefineConstants>TRACE;_NET_4;NUnit</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -255,6 +255,7 @@
     <Compile Include="System\Threading\Prig\PInterlockedTest.cs" />
     <Compile Include="TestUtilities\Mixins\System\MarshalByRefRunner.cs" />
     <Compile Include="TestUtilities\Mixins\System\AppDomainMixin.cs" />
+    <Compile Include="TestUtilities\Class1.cs" />
     <Compile Include="UntestableLibrary\IgnoreCA1724\Prig\IgnoreCA1724Test.cs" />
     <Compile Include="UntestableLibrary\Prig\AppDomainSomethingTest.cs" />
     <Compile Include="Urasandesu\Moq\Prig\MockMixin.cs" />
