--- a/Test.program1/packages.config
+++ b/Test.program1/packages.config
@@ -4,4 +4,11 @@
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net40" />
   <package id="Prig" version="2.3.2" targetFramework="net40" />
+  <package id="xunit" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net452" />
 </packages>
